# ALCD

./: .gitignore  main.py  pyproject.toml
activities/: 2025_08_22_orthogonalization.ipynb  2025_09_04_fft.ipynb  2025_09_04_wavelet.ipynb  2025_09_11_least_squares.ipynb  2025_09_11_section_3_5.ipynb  2025_09_25_compressed_sensing.ipynb  2025_10_09_ls_decomposition.ipynb  2025_10_23_seminary_gd.ipynb  at_1.ipynb  at_2.ipynb  at_3.ipynb  classes_activities.ipynb
classes/: 2025_10_09.typ
presentation_2025-10-30/: .gitignore  ConcatenateScenes.ipynb  example.ipynb  presentation.py  presentationgl.py  slides.txt
presentation_2025-10-30/slides/: FeatureMap3DExample.json  FeatureMapCons.json  FeatureMapExplanation.json  KernelFunctionDefinition.json  KernelMatrixDefinition.json  KernelPCAOverview.json  MercerKernelExplanation.json  MercerKernelProperties.json  Merged.json  TitleScene.json
reports/: at_1.typ
