[project]
name = "alcd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.2",
    "ipykernel>=6.30.1",
    "kagglehub>=0.3.12",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "pydub>=0.25.1",
    "pywavelets>=1.9.0",
    "scikit-image>=0.25.2",
    "scipy>=1.16.1",
]
